// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly if variants have different prices 1`] = `
<ProductPrice
  variants={
    Array [
      Object {
        "price": "10.00",
        "size": "Size 8",
        "sku": 1,
        "title": "Small",
      },
      Object {
        "price": "11.00",
        "size": "Size 10",
        "sku": 2,
        "title": "Medium",
      },
      Object {
        "price": "12.00",
        "size": "Size 12",
        "sku": 3,
        "title": "Large",
      },
    ]
  }
>
  <div
    className="c-product-price"
  >
    <span>
      £
      10.00
       - £
      12.00
    </span>
  </div>
</ProductPrice>
`;

exports[`renders correctly if variants have similar price 1`] = `
<ProductPrice
  variants={
    Array [
      Object {
        "price": "10.00",
        "size": "Size 8",
        "sku": 1,
        "title": "Small",
      },
      Object {
        "price": "10.00",
        "size": "Size 10",
        "sku": 2,
        "title": "Medium",
      },
      Object {
        "price": "10.00",
        "size": "Size 12",
        "sku": 3,
        "title": "Large",
      },
    ]
  }
>
  <div
    className="c-product-price"
  >
    <span>
      £
      10.00
    </span>
  </div>
</ProductPrice>
`;
